<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C0DCDC"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragments.MainDashboardFragment">

    <!-- סרגל עליון -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/dark_cyan"
        android:gravity="center">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_dashboard"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- אזור גלילה למניעת חיתוכים במסכים קטנים -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- שורה ראשונה -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- כרטיסיית חיפוש עיר -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardCitySearch"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:cardBackgroundColor="@color/dark_cyan"
                    android:clickable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:tint="@color/white"
                            android:src="@drawable/ic_search" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_city"
                            android:layout_marginTop="8dp"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:gravity="center"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- כרטיסיית מזג אוויר מקומי -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardLocalWeather"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:cardBackgroundColor="@color/dark_cyan"
                    android:clickable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:tint="@color/white"
                            android:src="@drawable/ic_location" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location_weather"
                            android:layout_marginTop="8dp"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:gravity="center"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <!-- שורה שנייה -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- כרטיסיית מועדפים -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardFavorites"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:cardBackgroundColor="@color/dark_cyan"
                    android:clickable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:tint="@color/white"
                            android:src="@drawable/ic_favorites" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/favorite"
                            android:layout_marginTop="8dp"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:gravity="center"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- כרטיסיית הגדרות -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSettings"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:cardBackgroundColor="@color/dark_cyan"
                    android:clickable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:tint="@color/white"
                            android:src="@drawable/ic_settings" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings"
                            android:layout_marginTop="8dp"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:gravity="center"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>




